k8s/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: flask-rollout
spec:
  replicas: 2
  strategy:
    blueGreen:
      # activeService specifies the service to update with the new template hash at time of promotion.
      # This field is mandatory for the blueGreen update strategy.    
      activeService: rollout-bluegreen-active
      # previewService specifies the service to update with the new template hash before promotion.
      # This allows the preview stack to be reachable without serving production traffic.
      # This field is optional.      
      previewService: rollout-bluegreen-preview
      # autoPromotionEnabled disables automated promotion of the new stack by pausing the rollout
      # immediately before the promotion. If omitted, the default behavior is to promote the new
      # stack as soon as the ReplicaSet are completely ready/available.
      # Rollouts can be resumed using: `kubectl argo rollouts promote ROLLOUT`      
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: flask-bg-app
  template:
    metadata:
      labels:
        app: flask-bg-app
    spec:
      containers:
        - name: flask-simple
          image: nightmar39/flask-bg-app:230b659
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
