k8s/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-preview
spec:
  type: NodePort
  selector:
    app: flask-bg-app  
  ports:
      - nodePort: 32000
        protocol: TCP
        port: 8000
