k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-bluegreen-active
spec:
  type: NodePort
  selector:
    app: flask-bg-app
  ports:
      - nodePort: 31000
        protocol: TCP
        port: 8080
